--- a/src/App.css
+++ b/src/App.css
@@ -379,15 +379,93 @@ body {
 }
 
 .form-container{
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* padding: ; */
+  width: 100%;
+  /* min-height: 100vh; */
+  background-color: #001529; 
+  min-height: 75vh;
+  padding-top: 5em;
+}
+
+.login-heading{
+  text-align: center;
+  font-size: 2.5em;
+  color: white;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  margin-top: -2em;
+}
+
+.login-inp-lab{
+  padding: 5px 10px;
+}
+
+.login-inp-lab input{
+  padding: 16px;
+  padding-right: 45px;
+} 
+
+.signup-input-parent input{
+  border: 2px solid rgb(255, 255, 255); 
+  padding: 5px 15px;
+  /* background-color: #007bff; */
+  border-radius: 5px;
+  /* padding: 10px 20px; */
+  /* background-color: rgb(32, 32, 32); */
+  color: #001529;
+}
+
+.signUp-category select{
+  border: 2px solid white;
+  color: white;
+  padding: 5px 15px;
+  background-color: transparent;
+}
+
+.login-inp-lab label{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1em;
+}
+ 
+  .Login-btn{
+  background-color: #007bff;
+  color: #fff;
+  font-weight: bold;
+  padding: 8px 18px;
+  border-radius: 5px;
+  /* max-width: 5em; */
+
+ } 
+
+.login-btn-parent{
+  display: flex;
+  justify-content: center;
+
+}
+
+.sign-up-headingg{
+  text-align: center;
+  font-size: 2.5em;
+  color: white;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  /* margin-top: -3em; */
+}
+
+.sign-up-parent{
+margin: 10px 9em;
+}
+
+
+.form-container-parent-login{
+  height: 100vh;
+  background-color: #e4edf5;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #cce1ff;
-  padding-top: 5em;
-
-    
 }
 
 .form-group {
@@ -488,7 +566,7 @@ font-size: 1.5em;
 }
 
 .signupParent{
-  background-color: #cce1ff;
+  background-color: #e6e8eb;
 
 }
 
